fix: update the site info, mentioning the end of development.

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 				<li><a href="/steascree-1.5.4-linux-x64.tar.gz">Linux</a></li>
 			</ul>
 		</div>
-		<p>Join <a href="http://steamcommunity.com/groups/steascree">SteaScree official Steam group</a> for the latest announcements and discussion.</p>
-		<p>SteaScree's source code is freely available <a href="https://github.com/Foyl/SteaScree">on GitHub</a>. Feel free to suggest patches or fork it if you would like.</p>
-		<p id="Closing">If you encounter any issues, please report them in the project's <a href="https://github.com/Foyl/SteaScree/issues">Issues</a> section on GitHub.</p>
+		<p>Join <a href="http://steamcommunity.com/groups/steascree">SteaScree official Steam group</a>.</p>
+		<p>SteaScree's source code is available on <a href="https://github.com/Foyl/SteaScree">GitHub</a>. Keep in mind that development of this project has ceased.</p>
 	</div>
 
 	<footer>SteaScree built with <a href="https://www.qt.io/">Qt</a>, Windows installer by <a href="https://installbuilder.bitrock.com/">BitRock</a>. <a href="mailto:awthwathje@gmail.com">Contact</a>.</footer>
